# meeting-plunger

./: .cursorrules  .gitignore  .npmrc  COMMANDS.md  CURSOR_RULES.md  LICENSE  NIX_COMMANDS.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  VERIFICATION.md  flake.nix  package.json  setup-meeting-plunger-dev.sh
.cursor/: README.md
.cursor/rules/: e2e-testing.mdc  general.mdc
.github/workflows/: ci.yml
backend/: config.py  main.py  package.json  pyproject.toml  requirements.txt  test_main.py
backend/tests/: test_main.py
client/: .air.toml  .golangci.yml  Makefile  README.md  handlers.go  handlers_test.go  main.go
client/tests/: main_test.go
docs/: API_SHARING.md  ARCHITECTURE.md  BIDIRECTIONAL_API_GENERATION.md  LINTING_AND_FORMATTING.md  QUICK_START.md  README.md  VERIFICATION.md  VSCODE_SETUP.md  nix.md
e2e/: .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
e2e/features/: single_speaker.feature
e2e/pages/: ClientPage.ts  start.ts
e2e/steps/: client-ui.steps.ts  health-check.steps.ts  single-speaker.steps.ts
e2e/support/: world.ts
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  index.html  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.spec.ts  App.vue  style.css
frontend/src/components/: TranscriptResult.spec.ts  TranscriptResult.vue  UploadForm.spec.ts  UploadForm.vue
local-service/: go.mod  handlers.go  main.go
scripts/: generate-backend-openapi.sh  setup-cursor-go.sh  validate-api-generation.sh
